k8s/pre/service-definition.yml
apiVersion: v1
kind: Service
metadata:
 namespace: virgin-pre
 name: virgin-blog-pre
spec:
 type: NodePort
 selector:
  app: virgin-blog-pre
 ports:
  - name: http
    protocol: TCP
    nodePort: 30163
    port: 8080
    targetPort: 80
